--- a/templates/home.html
+++ b/templates/home.html
@@ -9,6 +9,7 @@
 		<a href="/delete"><button>파일 삭제</button></a>
 		<a href="/message_send"><button>메세지 보내기</button></a>
 		<a href="/message_receive"><button>메세지 받기</button></a>	
+		<a href="/weather"><button>서울 날씨정보</button></a>	
 	</body>
 </html>
 
