--- a/templates/weather.html
+++ b/templates/weather.html
@@ -6,7 +6,7 @@
 		<a href="/">홈</a><br>
 	</body>
 	<body>
-		<img src='source/map.jpg'/><br>
+		<img src='images/map.jpg'/><br>
 		<form action = "/fileDelete" method = "POST" enctype="multipart/form-data"> 
 			<input type = "text" name = "file" />
 			<input type="submit"/>
