--- a/templates/weather.html
+++ b/templates/weather.html
@@ -6,14 +6,12 @@
 		<a href="/">홈</a><br>
 	</body>
 	<body>
-		<img src='images/map.jpg'/><br>
-		<form action = "/fileDelete" method = "POST" enctype="multipart/form-data"> 
+
+	</body>
+	<body>
+		<br>
+		<form action = "/weather_alarm" method = "GET" enctype="multipart/form-data"> 
 			<input type = "text" name = "file" />
 			<input type="submit"/>
-			<ul>
-	    		{% for n in files %}
-	    		<li>{{n}}</li>
-	    		{% endfor %}
-	    	</ul>
 	</body>
 </html>
