--- a/templates/weather.html
+++ b/templates/weather.html
@@ -7,7 +7,7 @@
 	</body>
 
 	<body>
-		<img src="{{'static', url_for(filename='/map.jpg') }}"/>
+		<img src="{{'static', url_for('static', filename='./map.jpg') }}"/>
 	</body>
 
 </html>
