--- a/templates/weather.html
+++ b/templates/weather.html
@@ -7,7 +7,12 @@
 	</body>
 
 	<body>
-		<img src="{{'static', url_for('static', filename='./map.jpg') }}"/>
+		<img src="{{ url_for('static', filename='./map.jpg') }}"/><br>
+		
 	</body>
-
+	<body>
+		{% for n in range(0,24) %}
+		데이터 : {{data[n].values()}}<br>
+		{% endfor %}
+	</body>
 </html>
