--- a/templates/weather.html
+++ b/templates/weather.html
@@ -7,8 +7,110 @@
 	</body>
 
 	<body>
-		<img src="{{ url_for('static', filename='./map.jpg') }}"/><br>
-		
+		<div style='position: relative'>
+			<img height="800px" width="1200px" src="{{ url_for('static', filename='./map.jpg') }}"/><br>
+			<!-- 강남구 -->
+			<div style="left: 767px; bottom:205px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
+				강남
+			</div>
+			<!-- 강동구 -->
+			<div style="left: 1005px; bottom:343px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
+				강동
+			</div>
+			<!-- 강북구 -->
+			<div style="left: 670px; bottom:580px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
+				강북
+			</div>
+			<!-- 강서구 -->
+			<div style="left: 160px; bottom:375px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
+				강서
+			</div>
+			<!-- 관악구 -->
+			<div style="left: 495px; bottom:113px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
+				관악
+			</div>
+			<!-- 광진구 -->
+			<div style="left: 865px; bottom:322px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
+				광진
+			</div>
+			<!-- 구로구 -->
+			<div style="left: 225px; bottom:185px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
+				구로
+			</div>
+			<!-- 금천구 -->
+			<div style="left: 365px; bottom:130px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
+				금천
+			</div>
+			<!-- 노원구 -->
+			<div style="left: 840px; bottom:605px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
+				노원
+			</div>
+			<!-- 도봉구 -->
+			<div style="left: 730px; bottom:643px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
+				도봉
+			</div>
+			<!-- 동대문구 -->
+			<div style="left: 770px; bottom:423px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
+				동대문
+			</div>
+			<!-- 동작구 -->
+			<div style="left: 490px; bottom:215px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
+				동작
+			</div>
+			<!-- 마포구 -->
+			<div style="left: 400px; bottom:367px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
+				마포
+			</div>
+			<!-- 서대문구 -->
+			<div style="left: 455px; bottom:410px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
+				서대문
+			</div>
+			<!-- 서초구 -->
+			<div style="left: 655px; bottom:170px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
+				서초
+			</div>
+			<!-- 성동구 -->
+			<div style="left: 745px; bottom:345px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
+				성동
+			</div>
+			<!-- 성북구 -->
+			<div style="left: 680px; bottom:483px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
+				성북
+			</div>
+			<!-- 송파구 -->
+			<div style="left: 920px; bottom:230px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
+				송파
+			</div>
+			<!-- 양천구 -->
+			<div style="left: 255px; bottom:255px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
+				양천
+			</div>
+			<!-- 영등포구 -->
+			<div style="left: 395px; bottom:265px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
+				영등포
+			</div>
+			<!-- 용산구 -->
+			<div style="left: 580px; bottom:287px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
+				용산
+			</div>
+			<!-- 은평구 -->
+			<div style="left: 445px; bottom:540px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
+				은평
+			</div>
+			<!-- 종로구 -->
+			<div style="left: 585px; bottom:430px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
+				종로
+			</div>
+			<!-- 중구 -->
+			<div style="left: 625px; bottom:365px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
+				중구
+			</div>
+			<!-- 중랑구 -->
+			<div style="left: 885px; bottom:463px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
+				중랑
+			</div>			
+		</div>
+			
 	</body>
 	<body>
 		{% for n in range(0,24) %}
