--- a/templates/weather.html
+++ b/templates/weather.html
@@ -4,16 +4,19 @@
 	</head>
 	<body>
 		<a href="/">홈</a><br>
+
+		<form>
+			<select name = "Time">
+				{% for n in range(0,(count-1)) %}
+				<option value = "" selected>{{time[n]['date']}}</option>
+				{% endfor %}
+			</select>
+		</form>
 	</body>
 
 	<body>
 		<div style='position: relative'>
-			<img height="800px" width="1200px", alt="" usemap="#imgmap001" class="event-img"
-				src="{{ url_for('static', filename='./map.jpg') }}"/><br>
-			<map id="imgmap001" name="imgmap001">
-				<area shape="rect" alt="" title="" coords="500,2100,1440,2500"
-					href="javascript:onEvent()" target="" />
-			</map>
+			<img height="800px" width="1200px" src="{{ url_for('static', filename='./map.jpg') }}"/><br>
 			<!-- 강남구 -->
 			<div style="left: 767px; bottom:205px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
 				{{data[0]['tmp']}}도
@@ -118,9 +121,9 @@
 			
 	</body>
 	<body>
-		{% for n in range(0,24) %}
+		<!-- {% for n in range(0,24) %}
 		{{data[n]['tmp']}}<br>
-		<!-- 데이터 : {{data[n].values()}}<br> -->
-		{% endfor %}
+		데이터 : {{data[n].values()}}<br>
+		{% endfor %} -->
 	</body>
 </html>
