--- a/templates/weather.html
+++ b/templates/weather.html
@@ -1,5 +1,5 @@
 <html>
-	<head>
+	<head><br><br><br>
 		<title>서울특별시 기온</title>
 		<script type='text/javascript'>
 			function out(){
@@ -11,8 +11,11 @@
 	</head>
 
 	<body>
-		<a href="/">홈</a><br><br>
-		기준시간: {{date}}<br><br>
+		<a href="/">홈</a> <div id='head' style='font: normal bold 1.5em/1em Georgiz'>
+			<center>
+				기준시간: {{date}}<br><br>
+			</center>
+		</div>
 		시간선택 (3시간 간격)<br>
 		<form action = '' method='post'>
 			<select name = "Time" id = 'Time' >
@@ -30,103 +33,103 @@
 			<img height="800px" width="1200px" src="{{ url_for('static', filename='./map.jpg') }}"/><br>
 			<!-- 강남구 -->
 			<div style="left: 767px; bottom:205px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
-				{{data[0]['tmp']}}도
+				{{data[0]['tmp']}}도/{{data[0]['rain']}}%
 			</div>
 			<!-- 강동구 -->
 			<div style="left: 1005px; bottom:343px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
-				{{data[1]['tmp']}}도
+				{{data[1]['tmp']}}도/{{data[1]['rain']}}%
 			</div>
 			<!-- 강북구 -->
 			<div style="left: 670px; bottom:580px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
-				{{data[2]['tmp']}}도
+				{{data[2]['tmp']}}도/{{data[2]['rain']}}%
 			</div>
 			<!-- 강서구 -->
 			<div style="left: 160px; bottom:375px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
-				{{data[3]['tmp']}}도
+				{{data[3]['tmp']}}도/{{data[3]['rain']}}%
 			</div>
 			<!-- 관악구 -->
 			<div style="left: 495px; bottom:113px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
-				{{data[4]['tmp']}}도
+				{{data[4]['tmp']}}도/{{data[4]['rain']}}%
 			</div>
 			<!-- 광진구 -->
 			<div style="left: 865px; bottom:322px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
-				{{data[5]['tmp']}}도
+				{{data[5]['tmp']}}도/{{data[5]['rain']}}%
 			</div>
 			<!-- 구로구 -->
 			<div style="left: 225px; bottom:185px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
-				{{data[6]['tmp']}}도
+				{{data[6]['tmp']}}도/{{data[6]['rain']}}%
 			</div>
 			<!-- 금천구 -->
 			<div style="left: 365px; bottom:130px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
-				{{data[7]['tmp']}}도
+				{{data[7]['tmp']}}도/{{data[7]['rain']}}%
 			</div>
 			<!-- 노원구 -->
 			<div style="left: 840px; bottom:605px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
-				{{data[8]['tmp']}}도
+				{{data[8]['tmp']}}도/{{data[8]['rain']}}%
 			</div>
 			<!-- 도봉구 -->
 			<div style="left: 730px; bottom:643px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
-				{{data[9]['tmp']}}도
+				{{data[9]['tmp']}}도/{{data[9]['rain']}}%
 			</div>
 			<!-- 동대문구 -->
 			<div style="left: 775px; bottom:423px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
-				{{data[10]['tmp']}}도
+				{{data[10]['tmp']}}도/{{data[10]['rain']}}%
 			</div>
 			<!-- 동작구 -->
 			<div style="left: 490px; bottom:215px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
-				{{data[11]['tmp']}}도
+				{{data[11]['tmp']}}도/{{data[11]['rain']}}%
 			</div>
 			<!-- 마포구 -->
 			<div style="left: 400px; bottom:367px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
-				{{data[12]['tmp']}}도
+				{{data[12]['tmp']}}도/{{data[12]['rain']}}%
 			</div>
 			<!-- 서대문구 -->
 			<div style="left: 460px; bottom:410px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
-				{{data[13]['tmp']}}도
+				{{data[13]['tmp']}}도/{{data[13]['rain']}}%
 			</div>
 			<!-- 서초구 -->
 			<div style="left: 655px; bottom:170px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
-				{{data[14]['tmp']}}도
+				{{data[14]['tmp']}}도/{{data[14]['rain']}}%
 			</div>
 			<!-- 성동구 -->
 			<div style="left: 745px; bottom:345px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
-				{{data[15]['tmp']}}도
+				{{data[15]['tmp']}}도/{{data[15]['rain']}}%
 			</div>
 			<!-- 성북구 -->
 			<div style="left: 680px; bottom:483px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
-				{{data[16]['tmp']}}도
+				{{data[16]['tmp']}}도/{{data[16]['rain']}}%
 			</div>
 			<!-- 송파구 -->
 			<div style="left: 920px; bottom:230px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
-				{{data[17]['tmp']}}도
+				{{data[17]['tmp']}}도/{{data[17]['rain']}}%
 			</div>
 			<!-- 양천구 -->
 			<div style="left: 255px; bottom:255px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
-				{{data[18]['tmp']}}도
+				{{data[18]['tmp']}}도/{{data[18]['rain']}}%
 			</div>
 			<!-- 영등포구 -->
 			<div style="left: 395px; bottom:265px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
-				{{data[19]['tmp']}}도
+				{{data[19]['tmp']}}도/{{data[19]['rain']}}%
 			</div>
 			<!-- 용산구 -->
 			<div style="left: 580px; bottom:287px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
-				{{data[20]['tmp']}}도
+				{{data[20]['tmp']}}도/{{data[20]['rain']}}%
 			</div>
 			<!-- 은평구 -->
 			<div style="left: 445px; bottom:540px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
-				{{data[21]['tmp']}}도
+				{{data[21]['tmp']}}도/{{data[21]['rain']}}%
 			</div>
 			<!-- 종로구 -->
 			<div style="left: 585px; bottom:430px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
-				{{data[22]['tmp']}}도
+				{{data[22]['tmp']}}도/{{data[22]['rain']}}%
 			</div>
 			<!-- 중구 -->
 			<div style="left: 625px; bottom:365px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
-				{{data[23]['tmp']}}도
+				{{data[23]['tmp']}}도/{{data[23]['rain']}}%
 			</div>
 			<!-- 중랑구 -->
 			<div style="left: 885px; bottom:463px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
-				{{data[24]['tmp']}}도
+				{{data[24]['tmp']}}도/{{data[24]['rain']}}%
 			</div>			
 		</div>			
 	</body>
