--- a/templates/weather.html
+++ b/templates/weather.html
@@ -25,7 +25,6 @@
 				{% endfor %} 
 			</select> <a href="" onclick=" location.href = '/weather'+ out(this.value); return false;"><button>확인</button></a>
 		</form>
-		
 	</body>
 
 	<body>
@@ -33,103 +32,278 @@
 			<img height="800px" width="1200px" src="{{ url_for('static', filename='./map.jpg') }}"/><br>
 			<!-- 강남구 -->
 			<div style="left: 767px; bottom:205px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
-				{{data[0]['tmp']}}도/{{data[0]['rain']}}%
+				{{data[0]['tmp']}}도/{{data[0]['rain']}}%<br>
+				{% if data[0]['sky'] == 'sunny' %}
+					<img height='25px' width='25px' src="{{ url_for('static', filename='./sunny.png') }}"/>
+				{% elif data[0]['sky'] == 'cloudy' %}
+					<img height='40px' width='40px' src="{{ url_for('static', filename='./cloudy.png') }}"/>
+				{% else %}
+					<img height='40px' width='40px' src="{{ url_for('static', filename='./gray2.png') }}"/>
+				{% endif %}
 			</div>
 			<!-- 강동구 -->
 			<div style="left: 1005px; bottom:343px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
-				{{data[1]['tmp']}}도/{{data[1]['rain']}}%
+				{{data[1]['tmp']}}도/{{data[1]['rain']}}%<br>
+				{% if data[1]['sky'] == 'sunny' %}
+					<img height='25px' width='25px' src="{{ url_for('static', filename='./sunny.png') }}"/>
+				{% elif data[1]['sky'] == 'cloudy' %}
+					<img height='40px' width='40px' src="{{ url_for('static', filename='./cloudy.png') }}"/>
+				{% else %}
+					<img height='40px' width='40px' src="{{ url_for('static', filename='./gray.png') }}"/>
+				{% endif %}
 			</div>
 			<!-- 강북구 -->
 			<div style="left: 670px; bottom:580px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
-				{{data[2]['tmp']}}도/{{data[2]['rain']}}%
+				{{data[2]['tmp']}}도/{{data[2]['rain']}}%<br>
+				{% if data[2]['sky'] == 'sunny' %}
+					<img height='25px' width='25px' src="{{ url_for('static', filename='./sunny.png') }}"/>
+				{% elif data[2]['sky'] == 'cloudy' %}
+					<img height='40px' width='40px' src="{{ url_for('static', filename='./cloudy.png') }}"/>
+				{% else %}
+					<img height='40px' width='40px' src="{{ url_for('static', filename='./gray.png') }}"/>
+				{% endif %}
 			</div>
 			<!-- 강서구 -->
 			<div style="left: 160px; bottom:375px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
-				{{data[3]['tmp']}}도/{{data[3]['rain']}}%
+				{{data[3]['tmp']}}도/{{data[3]['rain']}}%<br>
+				{% if data[3]['sky'] == 'sunny' %}
+					<img height='25px' width='25px' src="{{ url_for('static', filename='./sunny.png') }}"/>
+				{% elif data[3]['sky'] == 'cloudy' %}
+					<img height='40px' width='40px' src="{{ url_for('static', filename='./cloudy.png') }}"/>
+				{% else %}
+					<img height='40px' width='40px' src="{{ url_for('static', filename='./gray.png') }}"/>
+				{% endif %}
 			</div>
 			<!-- 관악구 -->
 			<div style="left: 495px; bottom:113px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
-				{{data[4]['tmp']}}도/{{data[4]['rain']}}%
+				{{data[4]['tmp']}}도/{{data[4]['rain']}}%<br>
+				{% if data[4]['sky'] == 'sunny' %}
+					<img height='25px' width='25px' src="{{ url_for('static', filename='./sunny.png') }}"/>
+				{% elif data[4]['sky'] == 'cloudy' %}
+					<img height='40px' width='40px' src="{{ url_for('static', filename='./cloudy.png') }}"/>
+				{% else %}
+					<img height='40px' width='40px' src="{{ url_for('static', filename='./gray.png') }}"/>
+				{% endif %}
 			</div>
 			<!-- 광진구 -->
 			<div style="left: 865px; bottom:322px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
-				{{data[5]['tmp']}}도/{{data[5]['rain']}}%
+				{{data[5]['tmp']}}도/{{data[5]['rain']}}%<br>
+				{% if data[5]['sky'] == 'sunny' %}
+					<img height='25px' width='25px' src="{{ url_for('static', filename='./sunny.png') }}"/>
+				{% elif data[5]['sky'] == 'cloudy' %}
+					<img height='40px' width='40px' src="{{ url_for('static', filename='./cloudy.png') }}"/>
+				{% else %}
+					<img height='40px' width='40px' src="{{ url_for('static', filename='./gray.png') }}"/>
+				{% endif %}
 			</div>
 			<!-- 구로구 -->
 			<div style="left: 225px; bottom:185px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
-				{{data[6]['tmp']}}도/{{data[6]['rain']}}%
+				{{data[6]['tmp']}}도/{{data[6]['rain']}}%<br>
+				{% if data[6]['sky'] == 'sunny' %}
+					<img height='25px' width='25px' src="{{ url_for('static', filename='./sunny.png') }}"/>
+				{% elif data[6]['sky'] == 'cloudy' %}
+					<img height='40px' width='40px' src="{{ url_for('static', filename='./cloudy.png') }}"/>
+				{% else %}
+					<img height='40px' width='40px' src="{{ url_for('static', filename='./gray.png') }}"/>
+				{% endif %}
 			</div>
 			<!-- 금천구 -->
 			<div style="left: 365px; bottom:130px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
-				{{data[7]['tmp']}}도/{{data[7]['rain']}}%
+				{{data[7]['tmp']}}도/{{data[7]['rain']}}%<br>
+				{% if data[7]['sky'] == 'sunny' %}
+					<img height='25px' width='25px' src="{{ url_for('static', filename='./sunny.png') }}"/>
+				{% elif data[7]['sky'] == 'cloudy' %}
+					<img height='40px' width='40px' src="{{ url_for('static', filename='./cloudy.png') }}"/>
+				{% else %}
+					<img height='40px' width='40px' src="{{ url_for('static', filename='./gray.png') }}"/>
+				{% endif %}
 			</div>
 			<!-- 노원구 -->
 			<div style="left: 840px; bottom:605px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
-				{{data[8]['tmp']}}도/{{data[8]['rain']}}%
+				{{data[8]['tmp']}}도/{{data[8]['rain']}}%<br>
+				{% if data[8]['sky'] == 'sunny' %}
+					<img height='25px' width='25px' src="{{ url_for('static', filename='./sunny.png') }}"/>
+				{% elif data[8]['sky'] == 'cloudy' %}
+					<img height='40px' width='40px' src="{{ url_for('static', filename='./cloudy.png') }}"/>
+				{% else %}
+					<img height='40px' width='40px' src="{{ url_for('static', filename='./gray.png') }}"/>
+				{% endif %}
 			</div>
 			<!-- 도봉구 -->
 			<div style="left: 730px; bottom:643px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
-				{{data[9]['tmp']}}도/{{data[9]['rain']}}%
+				{{data[9]['tmp']}}도/{{data[9]['rain']}}%<br>
+				{% if data[9]['sky'] == 'sunny' %}
+					<img height='25px' width='25px' src="{{ url_for('static', filename='./sunny.png') }}"/>
+				{% elif data[9]['sky'] == 'cloudy' %}
+					<img height='40px' width='40px' src="{{ url_for('static', filename='./cloudy.png') }}"/>
+				{% else %}
+					<img height='40px' width='40px' src="{{ url_for('static', filename='./gray.png') }}"/>
+				{% endif %}
 			</div>
 			<!-- 동대문구 -->
 			<div style="left: 775px; bottom:423px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
-				{{data[10]['tmp']}}도/{{data[10]['rain']}}%
+				{{data[10]['tmp']}}도/{{data[10]['rain']}}%<br>
+				{% if data[10]['sky'] == 'sunny' %}
+					<img height='25px' width='25px' src="{{ url_for('static', filename='./sunny.png') }}"/>
+				{% elif data[10]['sky'] == 'cloudy' %}
+					<img height='40px' width='40px' src="{{ url_for('static', filename='./cloudy.png') }}"/>
+				{% else %}
+					<img height='40px' width='40px' src="{{ url_for('static', filename='./gray.png') }}"/>
+				{% endif %}
 			</div>
 			<!-- 동작구 -->
 			<div style="left: 490px; bottom:215px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
-				{{data[11]['tmp']}}도/{{data[11]['rain']}}%
+				{{data[11]['tmp']}}도/{{data[11]['rain']}}%<br>
+				{% if data[11]['sky'] == 'sunny' %}
+					<img height='25px' width='25px' src="{{ url_for('static', filename='./sunny.png') }}"/>
+				{% elif data[11]['sky'] == 'cloudy' %}
+					<img height='40px' width='40px' src="{{ url_for('static', filename='./cloudy.png') }}"/>
+				{% else %}
+					<img height='40px' width='40px' src="{{ url_for('static', filename='./gray.png') }}"/>
+				{% endif %}
 			</div>
 			<!-- 마포구 -->
 			<div style="left: 400px; bottom:367px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
-				{{data[12]['tmp']}}도/{{data[12]['rain']}}%
+				{{data[12]['tmp']}}도/{{data[12]['rain']}}%<br>
+				{% if data[12]['sky'] == 'sunny' %}
+					<img height='25px' width='25px' src="{{ url_for('static', filename='./sunny.png') }}"/>
+				{% elif data[12]['sky'] == 'cloudy' %}
+					<img height='40px' width='40px' src="{{ url_for('static', filename='./cloudy.png') }}"/>
+				{% else %}
+					<img height='40px' width='40px' src="{{ url_for('static', filename='./gray.png') }}"/>
+				{% endif %}
 			</div>
 			<!-- 서대문구 -->
 			<div style="left: 460px; bottom:410px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
-				{{data[13]['tmp']}}도/{{data[13]['rain']}}%
+				{{data[13]['tmp']}}도/{{data[13]['rain']}}%<br>
+				{% if data[13]['sky'] == 'sunny' %}
+					<img height='25px' width='25px' src="{{ url_for('static', filename='./sunny.png') }}"/>
+				{% elif data[13]['sky'] == 'cloudy' %}
+					<img height='40px' width='40px' src="{{ url_for('static', filename='./cloudy.png') }}"/>
+				{% else %}
+					<img height='40px' width='40px' src="{{ url_for('static', filename='./gray.png') }}"/>
+				{% endif %}
 			</div>
 			<!-- 서초구 -->
 			<div style="left: 655px; bottom:170px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
-				{{data[14]['tmp']}}도/{{data[14]['rain']}}%
+				{{data[14]['tmp']}}도/{{data[14]['rain']}}%<br>
+				{% if data[14]['sky'] == 'sunny' %}
+					<img height='25px' width='25px' src="{{ url_for('static', filename='./sunny.png') }}"/>
+				{% elif data[14]['sky'] == 'cloudy' %}
+					<img height='40px' width='40px' src="{{ url_for('static', filename='./cloudy.png') }}"/>
+				{% else %}
+					<img height='40px' width='40px' src="{{ url_for('static', filename='./gray.png') }}"/>
+				{% endif %}
 			</div>
 			<!-- 성동구 -->
 			<div style="left: 745px; bottom:345px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
-				{{data[15]['tmp']}}도/{{data[15]['rain']}}%
+				{{data[15]['tmp']}}도/{{data[15]['rain']}}%<br>
+				{% if data[15]['sky'] == 'sunny' %}
+					<img height='25px' width='25px' src="{{ url_for('static', filename='./sunny.png') }}"/>
+				{% elif data[15]['sky'] == 'cloudy' %}
+					<img height='40px' width='40px' src="{{ url_for('static', filename='./cloudy.png') }}"/>
+				{% else %}
+					<img height='40px' width='40px' src="{{ url_for('static', filename='./gray.png') }}"/>
+				{% endif %}
 			</div>
 			<!-- 성북구 -->
 			<div style="left: 680px; bottom:483px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
-				{{data[16]['tmp']}}도/{{data[16]['rain']}}%
+				{{data[16]['tmp']}}도/{{data[16]['rain']}}%<br>
+				{% if data[16]['sky'] == 'sunny' %}
+					<img height='25px' width='25px' src="{{ url_for('static', filename='./sunny.png') }}"/>
+				{% elif data[16]['sky'] == 'cloudy' %}
+					<img height='40px' width='40px' src="{{ url_for('static', filename='./cloudy.png') }}"/>
+				{% else %}
+					<img height='40px' width='40px' src="{{ url_for('static', filename='./gray.png') }}"/>
+				{% endif %}
 			</div>
 			<!-- 송파구 -->
 			<div style="left: 920px; bottom:230px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
-				{{data[17]['tmp']}}도/{{data[17]['rain']}}%
+				{{data[17]['tmp']}}도/{{data[17]['rain']}}%<br>
+				{% if data[17]['sky'] == 'sunny' %}
+					<img height='25px' width='25px' src="{{ url_for('static', filename='./sunny.png') }}"/>
+				{% elif data[17]['sky'] == 'cloudy' %}
+					<img height='40px' width='40px' src="{{ url_for('static', filename='./cloudy.png') }}"/>
+				{% else %}
+					<img height='40px' width='40px' src="{{ url_for('static', filename='./gray.png') }}"/>
+				{% endif %}
 			</div>
 			<!-- 양천구 -->
 			<div style="left: 255px; bottom:255px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
-				{{data[18]['tmp']}}도/{{data[18]['rain']}}%
+				{{data[18]['tmp']}}도/{{data[18]['rain']}}%<br>
+				{% if data[18]['sky'] == 'sunny' %}
+					<img height='25px' width='25px' src="{{ url_for('static', filename='./sunny.png') }}"/>
+				{% elif data[18]['sky'] == 'cloudy' %}
+					<img height='40px' width='40px' src="{{ url_for('static', filename='./cloudy.png') }}"/>
+				{% else %}
+					<img height='40px' width='40px' src="{{ url_for('static', filename='./gray.png') }}"/>
+				{% endif %}
 			</div>
 			<!-- 영등포구 -->
 			<div style="left: 395px; bottom:265px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
-				{{data[19]['tmp']}}도/{{data[19]['rain']}}%
+				{{data[19]['tmp']}}도/{{data[19]['rain']}}%<br>
+				{% if data[19]['sky'] == 'sunny' %}
+					<img height='25px' width='25px' src="{{ url_for('static', filename='./sunny.png') }}"/>
+				{% elif data[19]['sky'] == 'cloudy' %}
+					<img height='40px' width='40px' src="{{ url_for('static', filename='./cloudy.png') }}"/>
+				{% else %}
+					<img height='40px' width='40px' src="{{ url_for('static', filename='./gray.png') }}"/>
+				{% endif %}
 			</div>
 			<!-- 용산구 -->
 			<div style="left: 580px; bottom:287px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
-				{{data[20]['tmp']}}도/{{data[20]['rain']}}%
+				{{data[20]['tmp']}}도/{{data[20]['rain']}}%<br>
+				{% if data[20]['sky'] == 'sunny' %}
+					<img height='25px' width='25px' src="{{ url_for('static', filename='./sunny.png') }}"/>
+				{% elif data[20]['sky'] == 'cloudy' %}
+					<img height='40px' width='40px' src="{{ url_for('static', filename='./cloudy.png') }}"/>
+				{% else %}
+					<img height='40px' width='40px' src="{{ url_for('static', filename='./gray.png') }}"/>
+				{% endif %}
 			</div>
 			<!-- 은평구 -->
 			<div style="left: 445px; bottom:540px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
-				{{data[21]['tmp']}}도/{{data[21]['rain']}}%
+				{{data[21]['tmp']}}도/{{data[21]['rain']}}%<br>
+				{% if data[21]['sky'] == 'sunny' %}
+					<img height='25px' width='25px' src="{{ url_for('static', filename='./sunny.png') }}"/>
+				{% elif data[21]['sky'] == 'cloudy' %}
+					<img height='40px' width='40px' src="{{ url_for('static', filename='./cloudy.png') }}"/>
+				{% else %}
+					<img height='40px' width='40px' src="{{ url_for('static', filename='./gray.png') }}"/>
+				{% endif %}
 			</div>
 			<!-- 종로구 -->
 			<div style="left: 585px; bottom:430px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
-				{{data[22]['tmp']}}도/{{data[22]['rain']}}%
+				{{data[22]['tmp']}}도/{{data[22]['rain']}}%<br>
+				{% if data[22]['sky'] == 'sunny' %}
+					<img height='25px' width='25px' src="{{ url_for('static', filename='./sunny.png') }}"/>
+				{% elif data[22]['sky'] == 'cloudy' %}
+					<img height='40px' width='40px' src="{{ url_for('static', filename='./cloudy.png') }}"/>
+				{% else %}
+					<img height='40px' width='40px' src="{{ url_for('static', filename='./gray.png') }}"/>
+				{% endif %}
 			</div>
 			<!-- 중구 -->
 			<div style="left: 625px; bottom:365px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
-				{{data[23]['tmp']}}도/{{data[23]['rain']}}%
+				{{data[23]['tmp']}}도/{{data[23]['rain']}}%<br>
+				{% if data[23]['sky'] == 'sunny' %}
+					<img height='25px' width='25px' src="{{ url_for('static', filename='./sunny.png') }}"/>
+				{% elif data[23]['sky'] == 'cloudy' %}
+					<img height='40px' width='40px' src="{{ url_for('static', filename='./cloudy.png') }}"/>
+				{% else %}
+					<img height='40px' width='40px' src="{{ url_for('static', filename='./gray.png') }}"/>
+				{% endif %}
 			</div>
 			<!-- 중랑구 -->
 			<div style="left: 885px; bottom:463px; width: 450px;  font-size: 1em; font-weight: bold; position: absolute;">
-				{{data[24]['tmp']}}도/{{data[24]['rain']}}%
+				{{data[24]['tmp']}}도/{{data[24]['rain']}}%<br>
+				{% if data[24]['sky'] == 'sunny' %}
+					<img height='25px' width='25px' src="{{ url_for('static', filename='./sunny.png') }}"/>
+				{% elif data[24]['sky'] == 'cloudy' %}
+					<img height='40px' width='40px' src="{{ url_for('static', filename='./cloudy.png') }}"/>
+				{% else %}
+					<img height='40px' width='40px' src="{{ url_for('static', filename='./gray.png') }}"/>
+				{% endif %}
 			</div>			
 		</div>			
 	</body>
