--- a/templates/home.html
+++ b/templates/home.html
@@ -3,13 +3,25 @@
 		<title>메뉴화면</title>
 	</head>
 	<body>
-		<a href="/upload"><button>파일 업로드</button></a>
-		<a href="/download"><button>파일 다운로드</button></a>
-		<a href="/list"><button>파일 리스트</button></a>
-		<a href="/delete"><button>파일 삭제</button></a>
-		<a href="/message_send"><button>메세지 보내기</button></a>
-		<a href="/message_receive"><button>메세지 받기</button></a>	
-		<a href="/weather"><button>서울 날씨정보</button></a>	
+		<center>
+			<div style="font-size: 5em; font-weight: bold;">
+			Dogyu's Server
+			</div>
+			<br><br>
+		</center>
+
+	</body>
+	<body>
+		<center>
+			<br>
+			<a href="/upload"><button>파일 업로드</button></a><br><br><br>
+			<a href="/download"><button>파일 다운로드</button></a><br><br><br>
+			<a href="/delete"><button>파일 삭제</button></a><br><br><br>
+			<a href="/message_send"><button>메세지 보내기</button></a><br><br><br>
+			<a href="/message_receive"><button>메세지 받기</button></a>	<br><br><br>
+			<a href="/weather"><button>서울 날씨정보</button></a>	
+		</center>
+		
 	</body>
 </html>
 
