--- a/templates/delete.html
+++ b/templates/delete.html
@@ -14,6 +14,6 @@
 	    		<li>{{n}}</li>
 	    		{% endfor %}
 	    	</ul>
+		</form>
 	</body>
 </html>
-<!-- form태그를 안 닫아도 정상적으로 작동하는데 괜찮은건지 알아봐야함, form태그가 좀 중요한듯 --->
