--- a/templates/kakao.html
+++ b/templates/kakao.html
@@ -1,11 +1,73 @@
 <html>
     <head>
         <meta charset='utf-8'>
-        <title>index</title>
+        <title>카카오</title>
     </head>
-    <body>
-        <a href="https://kauth.kakao.com/oauth/authorize?client_id=91d3b37e4651a9c3ab0216abfe877a50&redirect_uri=http://127.0.0.1:8000/oauth&response_type=code&scope=talk_message,friends
-        "><button>kakao login</button>
+    <center>
+        <a href="/">
+            <div style="color: rgb(175, 184, 178); font-size: 5em; font-weight: bold;">
+            Dogyu's Server
+            </div>
         </a>
+        <br><br>
+    </center>
+    <style>
+		a{
+			text-decoration-line: none;
+		}
+		html,body{
+			height:100%;
+		}
+		body{
+			background-color: rgba(15, 15, 15, 0.781);
+		}
+		body:before{
+			content:'';
+			display:inline-block;
+		}
+		button{
+			background:#00000000;
+			color:rgb(175, 184, 178);
+			border:none;
+			position:relative;
+			height:60px;
+			font-size:1.6em;
+			padding:0 2em;
+			cursor:pointer;
+			transition:800ms ease all;
+			outline:none;
+		}
+		button:hover{
+			background:rgba(5, 5, 5, 0.479);
+		}
+		button:before,
+		button:after{
+			content:'';
+			position:absolute;
+			top:0;
+			right:0;
+			height:2px;
+			width:0;
+			background: #deff24;
+			transition:400ms ease all;
+		}
+		button:after{
+			right:inherit;
+			top:inherit;
+			left:0;
+			bottom:0;
+		}
+		button:hover:before,
+		button:hover:after{
+			width:100%;
+			transition:800ms ease all;
+		}
+	</style>
+    <body>
+        <center><br><br>
+            <a href="https://kauth.kakao.com/oauth/authorize?client_id=91d3b37e4651a9c3ab0216abfe877a50&redirect_uri=http://127.0.0.1:8000/oauth&response_type=code&scope=talk_message,friends
+            "><button>kakao login</button>
+            </a>
+        </center>
     </body>
 </html>
