--- a/templates/message_send.html
+++ b/templates/message_send.html
@@ -3,12 +3,79 @@
 		<title>메세지 보내기</title>
 	</head>
 	<body>
-		<a href="/">홈</a><br>
+		<center>
+			<a href="/">
+				<div style="color: rgb(175, 184, 178); font-size: 5em; font-weight: bold;">
+				Dogyu's Server
+				</div>
+			</a>
+			<br><br>
+		</center>
 	</body>
+
+	<style>
+		a{
+			text-decoration-line: none;
+		}
+		html,body{
+			height:100%;
+		}
+		body{
+			background-color: rgba(15, 15, 15, 0.781);
+		}
+		body:before{
+			content:'';
+			display:inline-block;
+		}
+		input{
+			background:#00000000;
+			color:rgb(175, 184, 178);
+			border:none;
+			position:relative;
+			height:60px;
+			font-size:1.6em;
+			padding:0 2em;
+			cursor:pointer;
+			transition:800ms ease all;
+			outline:none;
+		}
+		#sub:hover{
+			background:rgba(5, 5, 5, 0.479);
+		}
+		#sub:before,
+		#sub:after{
+			content:'';
+			position:absolute;
+			top:0;
+			right:0;
+			height:2px;
+			width:0;
+			background: #deff24;
+			transition:400ms ease all;
+		}
+		#sub:after{
+			right:inherit;
+			top:inherit;
+			left:0;
+			bottom:0;
+		}
+		#sub:hover:before,
+		#sub:hover:after{
+			width:100%;
+			transition:800ms ease all;
+		}
+	</style>
 	<body>
+		<br><br><br><br>
+		<center>
 		<form action="/message_receive" method="post">
-			<p>전할 말 : <input type="text" name="message"></p>
-			<imput type="submit" value="전송">
+			<div style="font-size:1.6em; color:rgb(175, 184, 178);">
+				<p>전할 말 : <input type="text" name="message" style="background-color: white;"></p>
+			</div>
+			<div id = "sub">
+				<input type="submit" value="전송"/>
+			</div>
+		</center>
 	</body>
 
 </html>
