--- a/templates/upload.html
+++ b/templates/upload.html
@@ -3,14 +3,78 @@
 		<title>파일 업로드</title>
 	</head>
 	<body>
-		<a href="/">홈</a><br>
+		<center>
+			<a href="/">
+				<div style="color: rgb(175, 184, 178); font-size: 5em; font-weight: bold;">
+				Dogyu's Server
+				</div>
+			</a>
+			<br><br>
+		</center>
 	</body>
+	<style>
+		a{
+			text-decoration-line: none;
+		}
+		html,body{
+			height:100%;
+		}
+		body{
+			background-color: rgba(15, 15, 15, 0.781);
+		}
+		body:before{
+			content:'';
+			display:inline-block;
+		}
+		input{
+			background:#00000000;
+			color:rgb(175, 184, 178);
+			border:none;
+			position:relative;
+			height:60px;
+			font-size:1.6em;
+			padding:0 2em;
+			cursor:pointer;
+			transition:800ms ease all;
+			outline:none;
+		}
+		#sub:hover{
+			background:rgba(5, 5, 5, 0.479);
+		}
+		#sub:before,
+		#sub:after{
+			content:'';
+			position:absolute;
+			top:0;
+			right:0;
+			height:2px;
+			width:0;
+			background: #deff24;
+			transition:400ms ease all;
+		}
+		#sub:after{
+			right:inherit;
+			top:inherit;
+			left:0;
+			bottom:0;
+		}
+		#sub:hover:before,
+		#sub:hover:after{
+			width:100%;
+			transition:800ms ease all;
+		}
+		
+	</style>
 	<body>
-		<!-- 이 밑에 enctype 부분을 작성안하면 경로만 들어간다는데 잘 모르겠다 -->
-		<form action = "/fileUpload" method = "POST" enctype="multipart/form-data"> 
-			<input type = "file" name = "file" />
-			<input type="submit"/>
-		</form>
+		<br><br><br><br>
+		<center>
+			<form action = "/fileUpload" method = "POST" enctype="multipart/form-data"> 
+				<input type = "file" name = "file" /><br><br><br><br>
+				<div id = "sub">
+					<input type="submit" value="업로드" />
+				</div>
+			</form>
+		</center>
 	</body>
 </html>
 
