--- a/templates/delete.html
+++ b/templates/delete.html
@@ -67,7 +67,7 @@
 	<body>
 		<br><br><br><br>
 		<center>
-			<form action = "/fileDelete" method = "POST" enctype="multipart/form-data"> 
+			<form action = "/delete" method = "POST" enctype="multipart/form-data"> 
 				<input type = "text" name = "file" style="background-color: white;"/><br><br><br><br>
 				<div id = 'sub'>
 					<input type="submit" value="삭제"/>
