--- a/templates/upload.html
+++ b/templates/upload.html
@@ -68,10 +68,10 @@
 	<body>
 		<br><br><br><br>
 		<center>
-			<form action = "/fileUpload" method = "POST" enctype="multipart/form-data"> 
+			<form action = "/upload" method = "POST" enctype="multipart/form-data"> 
 				<input type = "file" name = "file" /><br><br><br><br>
 				<div id = "sub">
-					<input type="submit" value="업로드" />
+					<input type="submit" value="업로드"  />
 				</div>
 			</form>
 		</center>
