--- a/templates/message_send.html
+++ b/templates/message_send.html
@@ -80,7 +80,7 @@
 	<body>
 		<br><br><br><br>
 		<center>
-		<form action="http://127.0.0.1:8000/index.php" method="POST">
+		<form action="http://127.0.0.1:8000/message_send" method="POST">
 			<div style="font-size:1.6em; color:rgb(175, 184, 178);">
 				<p>닉네임 : <input type="text" name="nick" style="background-color: white;"></p>
 				<p>전할 말 : <textarea type="text" name="msg" style="background-color: white;"></textarea></p>
