--- a/templates/kakao.html
+++ b/templates/kakao.html
@@ -65,7 +65,7 @@
 	</style>
     <body>
         <center><br><br>
-            <a href="https://kauth.kakao.com/oauth/authorize?client_id=0a8a356679801891a01bdc324ec32d77&redirect_uri=http://127.0.0.1:8000/oauth&response_type=code
+            <a href="https://kauth.kakao.com/oauth/authorize?client_id=0a8a356679801891a01bdc324ec32d77&redirect_uri=https://127.0.0.1:8000/oauth&response_type=code
             "><button>kakao login</button>
             </a><br><br><br>
         </center>
