--- a/templates/kakao.html
+++ b/templates/kakao.html
@@ -66,7 +66,10 @@
     <body>
         <center><br><br>
             <a href="https://kauth.kakao.com/oauth/authorize?client_id=0a8a356679801891a01bdc324ec32d77&redirect_uri=https://127.0.0.1:8000/oauth&response_type=code
-            "><button>kakao login</button>
+            "><button>kakao to_me login</button>
+            </a><br><br><br>
+			<a href="https://kauth.kakao.com/oauth/authorize?client_id=91d3b37e4651a9c3ab0216abfe877a50&redirect_uri=https://127.0.0.1:8000/oauth&response_type=code&scope=talk_message,friends
+            "><button>kakao to_friend login</button>
             </a><br><br><br>
         </center>
     </body>
